# auto-judge-annotate

./: CHANGELOG.md  CLAUDE.md  README.md  USER_GUIDE.md  pyproject.toml
mockups/: UX-SPEC.md  nugget-centric-v12.html
src/autojudge_annotate/: __main__.py  generate_html.py  template.py  template_css.py  template_html.py  template_js_clues.py  template_js_draft.py  template_js_init.py  template_js_llm.py  template_js_main.py  template_js_nav.py  template_js_nuggets.py  template_js_nuggets_mode.py  template_js_nuggets_panel.py  template_js_phase.py  template_js_ranking.py  template_js_sidebar.py  template_js_source.py  template_js_spans.py  template_js_spans_core.py  template_js_state.py  template_js_sync.py  template_js_sync_core.py
