[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autojudge-annotate"
version = "0.3.5"
description = "Manual relevance annotation tools for TREC AutoJudge"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TREC AutoJudge Team"}
]
keywords = ["trec", "autojudge", "evaluation", "ir", "annotation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "autojudge-base",
    "click>=8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
autojudge-annotate = "autojudge_annotate.generate_html:cli"

[project.urls]
Homepage = "https://github.com/trec-autojudge/auto-judge-annotate"
Repository = "https://github.com/trec-autojudge/auto-judge-annotate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
